2001-12-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (gda_client_get_connection_list): new function
	(gda_client_find_connection): new function

2001-12-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_config_get_component_list): add the created
	structures to the list to be returned

	* gda-server.c (component_destroyed_cb): break the for loop when
	we find the item
	(gda_server_class_init): actually create the object class signals

2001-11-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-provider.c (gda_server_provider_open_connection):
	added support for the POOLING parameter included in the connection
	string, so that clients not using the client library (python, perl,
	etc) have access to the connection pooling feature

	* gda-server-connection.[ch] (gda_server_connection_get_string): new
	(gda_server_connection_get_username): new function
	(gda_server_connection_get_password): new function

2001-11-24  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server.c (gda_server_register_component): if I use
	"ptype = (GType *) ptype", I'll always get an invalid pointer :-)

2001-11-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-client.c (gda_client_open_connection): don't pass NULL
	to ORBit functions

	* gda-xml-document.c:
	* gda-recordset.c: include glib-object.h, not gobject/*.h

	* gda-parameter.[ch] (gda_parameter_new): added a GdaValueType
	parameter

	* gda-config.c (activation_property_to_parameter): adapted to recent
	changes in GdaParameter API

2001-11-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-parameter.[ch] (gda_parameter_list_add_value): implemented
	(gda_parameter_list_clear): new function
	(gda_parameter_list_find): implemented

2001-11-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-row.[ch] (gda_row_new): new function
	(gda_row_free): new function

	* gda-xml-database.c: removed <gobject/*.h>

2001-11-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c: use /apps/libgda as prefix for configuration,