@@ -51,7 +51,6 @@ struct _GdaDataModelClass {
 	/* virtual methods */
 	gint (* get_n_rows) (GdaDataModel *model);
 	gint (* get_n_columns) (GdaDataModel *model);
-	const gchar * (* get_column_title) (GdaDataModel *model, gint col);
 	const GdaValue * (* get_value_at) (GdaDataModel *model, gint col, gint row);
 };
 
@@ -64,6 +63,7 @@ void            gda_data_model_thaw (GdaDataModel *model);
 gint            gda_data_model_get_n_rows (GdaDataModel *model);
 gint            gda_data_model_get_n_columns (GdaDataModel *model);
 const gchar    *gda_data_model_get_column_title (GdaDataModel *model, gint col);
+void            gda_data_model_set_column_title (GdaDataModel *model, gint col, const gchar *title);
 const GdaValue *gda_data_model_get_value_at (GdaDataModel *model, gint col, gint row);
 
 G_END_DECLS
